# Valravn

./: .coverage  .env.example  .gitignore  ANALYSIS_REPORT.md  CLAUDE.md  Code_analysis.md  FIX_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  OC_Analysis4-9.md  README.md  config.yaml  coverage.json  learning_methods_cybersecurity_agents_report.md  mlflow.db  pyproject.toml  submission.txt
.claude/agents/: node-dev.md  prompt-engineer.md  test-writer.md
.qwen/: settings.json
.specify/: init-options.json
.specify/integrations/: claude.manifest.json  (+1 more)
analysis/: 578e86b6-d533-474c-9bbd-590dda2758de.record.json  5ab3eb9d-e4fb-439b-a1f9-b8ec1222d9d8.record.json  a94e6052-ba6c-47f7-9d8c-e0565e8a3e40.record.json  ce514e27-121b-4d04-90b2-a717240f2513.record.json  d2613e13-845f-453f-a88a-7a72e0dbc269.record.json  d74eba46-1cb7-4b19-8b90-b8197f2731bb.record.json  d74eba46-1cb7-4b19-8b90-b8197f2731bb.stdout  fda6ef23-0550-41fa-9cb8-1bea1418cc8a.record.json  investigation_plan.json
docs/: architecture.md  configuration.md  contributing.md
reports/: 20260405_213027_investigate_suspicious_memory_image_for_.json  20260405_213027_investigate_suspicious_memory_image_for_.md  20260405_213037_investigate_suspicious_memory_image_for_.json  20260405_213037_investigate_suspicious_memory_image_for_.md  20260405_213127_investigate_suspicious_memory_image_for_.json  20260405_213127_investigate_suspicious_memory_image_for_.md  20260405_213143_investigate_suspicious_memory_image_for_.json  20260405_213143_investigate_suspicious_memory_image_for_.md  20260405_213158_investigate_suspicious_memory_image_for_.json  20260405_213158_investigate_suspicious_memory_image_for_.md  20260405_213229_investigate_suspicious_memory_image_for_.json  20260405_213229_investigate_suspicious_memory_image_for_.md
tests/: conftest.py
(+92 files in other folders)
