[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "valravn"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=1.0",
    "langchain-core>=0.3",
    "mlflow>=2.13",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "scipy>=1.12",
]

[project.optional-dependencies]
# LLM Provider Support (choose one or more)
anthropic = ["langchain-anthropic>=0.3"]
openai = ["langchain-openai>=0.2"]
ollama = ["langchain-ollama>=0.1"]

# All providers (convenience)
all = [
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
    "langchain-ollama>=0.1",
]

dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "ruff>=0.4",
]

[project.scripts]
valravn = "valravn.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
markers = ["integration: requires SIFT tools on PATH"]
